terraform/securityGroup.tf
### GRUPO DE SEGURANÇA DO EKS (ssh_cluster)  ###

# Ingress: Permite acesso SSH (porta 22) de qualquer lugar (ou pode ser restrito a IPs específicos).
# Egress: Permite tráfego de saída para qualquer lugar.
resource "aws_security_group" "ssh_cluster_fastfood" {
  name   = "ssh_cluster"
  vpc_id = aws_vpc.vpc.id
}

resource "aws_security_group_rule" "ssh_cluster_in" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"] #0.0.0.0 - 255.255.255.255
  security_group_id = aws_security_group.ssh_cluster_fastfood.id
}

resource "aws_security_group_rule" "https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"] #0.0.0.0 - 255.255.255.255
  security_group_id = aws_security_group.ssh_cluster_fastfood.id
}

resource "aws_security_group_rule" "http_80" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"] # Permitir tráfego de qualquer lugar
  security_group_id = aws_security_group.ssh_cluster_fastfood.id
}

resource "aws_security_group_rule" "http" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"] # Permitir tráfego de qualquer lugar
  security_group_id = aws_security_group.ssh_cluster_fastfood.id
}

resource "aws_security_group_rule" "ssh_cluster_out" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"] #0.0.0.0 - 255.255.255.255
  security_group_id = aws_security_group.ssh_cluster_fastfood.id
}


## GRUPO DE SEGURANÇA DO RDS (rds_sg) ###
resource "aws_security_group" "rds_sg" {
  name        = "rds-security-group"
  description = "Security group for RDS"
  vpc_id      = aws_vpc.vpc.id
}

resource "aws_security_group_rule" "rds_out" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  security_group_id = aws_security_group.rds_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "rds_eks_ingress" {
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = aws_security_group.rds_sg.id
  cidr_blocks              = ["10.0.0.0/16"]
}
